Tweaks to summary and view the assessment pages

--- a/app/views/prism/check-existing-product-assessment.html
+++ b/app/views/prism/check-existing-product-assessment.html
@@ -477,6 +477,7 @@
               items: [
                 {
                   href: "#",
+                  text: "Change",
                   visuallyHiddenText: "Question 2"
                 }
               ]
