--- a/app/views/prism/confirmation-ra.html
+++ b/app/views/prism/confirmation-ra.html
@@ -14,11 +14,10 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleText: "Assessment complete",
-        html: "Assessment reference number<br><strong>2306-0005</strong>"
+        titleText: "Your product risk assessment complete"
       }) }}
 
-      <p>You have sucessfully added the risk assessment to All in All + Car Seat, Dragon Kingdom CT4262.</p>
+      <p>You have sucessfully added the risk assessment to <b>All in All + Car Seat, Dragon Kingdom CT4262</b>.</p>
 
       <h2 class="govuk-heading-m">
         Next steps
@@ -27,7 +26,7 @@
 
         <ul class="govuk-list">
 
-          <li><a href="prism-dashboard" class="govuk-link">View</a> or <a href="prism-dashboard" >assign the assessment to a case study</a>.</li>
+          <li><a href="prism-dashboard" class="govuk-link">View</a> or <a href="prism-dashboard" >assign the assessment to the product case</a>.</li>
 
 
                  <li><a href="#" class="govuk-link"></li>
