--- a/app/views/prism/task-list-v2.html
+++ b/app/views/prism/task-list-v2.html
@@ -52,7 +52,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
      <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">1. </span> Add assessment and product safety details
+        <span class="app-task-list__section-number">1. </span> Add assessment and extra product information
       </h2>
       <ul class="app-task-list__items">
         <li class="app-task-list__item">
@@ -79,7 +79,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
      <li>
       <h2 class="app-task-list__section">
-        <span class="app-task-list__section-number">1. </span> Add assessment and product safety details
+        <span class="app-task-list__section-number">1. </span> Add assessment and extra product information
       </h2>
       <ul class="app-task-list__items">
 
