PRISM legal standards and risk evaluation

--- a/app/views/prism/case-assessments-dash.html
+++ b/app/views/prism/case-assessments-dash.html
@@ -45,11 +45,19 @@ Home
   <tbody class="govuk-table__body">
 
     <tr class="govuk-table__row">
-      <th class="govuk-table__cell">Buckle failure</th>
+      <th class="govuk-table__cell">Buckle failure <p style="font-weight:normal">(HTML)</p></th>
       <td class="govuk-table__cell">Dimitri Koksharov <br/>Warwickshire County Council</td>
       <td class="govuk-table__cell">23 April 2023</td>
       <td class="govuk-table__cell"><a href="view-existing-assessment">View</a> | <a href="#">Select</a>
     </tr>
+
+    <tr class="govuk-table__row">
+      <th class="govuk-table__cell">Buckle – lack of protection <p style="font-weight:normal">(PDF, 64KB)</p></th>
+      <td class="govuk-table__cell">Lucy Duncan <br/>Warwickshire County Council</td>
+      <td class="govuk-table__cell">5 January 2023</td>
+      <td class="govuk-table__cell"><a href="view-existing-assessment">View</a> | <a href="#">Select</a>
+    </tr>
+
 
   </tbody>
 </table>
