--- a/app/views/prism/product-market-placement-v2.html
+++ b/app/views/prism/product-market-placement-v2.html
@@ -86,24 +86,31 @@
         <div class="govuk-form-group">
           <h3 class="govuk-heading-m">Product safety legislation and standards </h3>
           <p id="more-detail-hint" class="govuk-hint">
-        Search applicable safety legislations and standards and choose the ones that you feel are relevant to your product.</p>
+        Search applicable safety legislations and standards and add the ones that you feel are relevant to your product.</p>
 
 
-           <input class="govuk-input govuk-!-width-three-quarters" id="three-quarters" name="three-quarters" type="text" value="Regulation No 44/04 UN ECE approval of restraining devices for child occupants (child restraint systems)">
+           <input class="govuk-input govuk-!-width-three-quarters" id="three-quarters" name="three-quarters" type="text" value="">
 
-           <br/>
-           <br/>
+                      <button class="govuk-button govuk-button--secondary govuk-!-margin-left-2" data-module="govuk-button">
+            Add
+          </button>
 
-       <input class="govuk-input govuk-!-width-three-quarters" id="three-quarters" name="three-quarters" type="text" value="">
-  <p style="display:inline; margin-left: 20px;" ><a href="#"> Remove</a></p>
+       <div style="clear:both; margin-bottom: 15px;">
+        <p style="float:left">Construction Products Regulations 2013</p>
+         <p style="float:left; margin-left:20px;"><a href="#"> Remove</a></p>
+       </div>
+       <br/>
+       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+       <div style="clear:both">
+        <p style="float:left">Non-Automatic Weighing Instruments Regulations 2016</p>
+         <p style="float:left; margin-left:20px;"><a href="#"> Remove</a></p>
+       </div>
 
 
     <br/>
         <br/>
 
-          <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-  Add another
-</button>
+
 
   </fieldset>
 
