--- a/app/views/prism/start-page.html
+++ b/app/views/prism/start-page.html
@@ -12,20 +12,20 @@
     </h1>
 
     <p class="govuk-body-l">
-      The assessment is part of the recently introduced Product Safety Risk Assessment Methodology (PRISM) and intended for organisations responsible for market surveillance and enforcement.
+      The assessment will be undertaken using the  recently introduced Product Safety Risk Assessment Methodology (PRISM) which is intended for use by organisations responsible for market surveillance and enforcement.
     </p>
 
-    <p>Although PRISM is primarily aimed at evaluating the risks associated with non-food consumer goods, regulatory bodies in charge of other product categories may also find it beneficial, either in whole or in part.</p>
+    <!-- <p>Although PRISM is primarily aimed at assessing and evaluating the risks associated with general non-food consumer goods, regulatory bodies in charge of other types of products may also find it beneficial, either in whole or in part.</p> -->
 
-    <p>You can find the PRISM guide, case studies and statistical data sets to support your risk assessments
- on the <a href="https://www.gov.uk/guidance/product-safety-risk-assessment-methodology-prism" target="_blank"> guidance page</a>. The explanation of OPSS terminology concerned with risk and risk-related matters can be found on the <a href="https://www.gov.uk/guidance/opss-risk-lexicon" target="_blank">OPSS risk lexicon page</a>.  </p>
+    <p>You can find the PRISM guide, examples of risk assessments and statistical data sets to support your risk assessments
+ on the <a href="https://www.gov.uk/guidance/product-safety-risk-assessment-methodology-prism" target="_blank"> PRISM guidance page</a>. An explanation of OPSS terminology concerned with risk and risk-related matters can be found on the <a href="https://www.gov.uk/guidance/opss-risk-lexicon" target="_blank">OPSS risk lexicon page</a>.  </p>
 
       <p> Use this service to:</p>
 
 <ul class="govuk-list govuk-list--bullet">
-        <li><a href="triage-guidance">Risk triage</a> to determine whether the product needs a full safety risk assessment.</li>
+        <li><a href="triage-guidance">Undertake risk triage</a> to determine whether the product needs a full safety risk assessment.</li>
         <li>Search for products on the <a href="https://www.gov.uk/guidance/product-safety-support-for-local-authorities" target="_blank">Product Safety Database (PSD)</a>.</li>
-        <li>Assess and evaluate the risk level of the non-food consumer product.</li>
+        <li>Assess and evaluate the risk presenterd by general consumer products.</li>
         <li>Save and submit assessment results to the PSD.</li>
       </ul>
 
@@ -41,11 +41,19 @@
         <li> Product Safety Database (PSD) login credentials - we’ll ask you to sign in or <a href="#">request a new account</a> before starting the full risk assessment.</li>
         <li> Information about the product, including details of the manufacturer/supplier, number of products sold, and other information accompanying the product.</li>
         <li>Details of safety concerns associated with the product including number and nature of hazards.</li>
-        <li>Product test reports, legislative requirements and standards.</li>
-         <li>Research studies, statistical data sets or other evidence showing the average probability of product hazard occuring.</li>
-        <li>Risk assessments that have been undertaken previously for the product or
+      </ul>
+
+      <p>Also, the following information is likely to be useful and relevant in many circumstances:
+</p>
+
+      <ul class="govuk-list govuk-list--bullet govuk-!-padding-bottom-4">
+
+        <li>Product test reports.</li>
+         <li>Any relevant research studies, statistical data sets or other evidence to indicate the probability of harm ocurring and the nature of the harm.</li>
+        <li>Any risk assessments that have been undertaken previously for the type of product being assessed or,for
 closely related products.</li>
       </ul>
+
 
 
   {{ govukButton({
