--- a/app/views/prism/question-triage-b.html
+++ b/app/views/prism/question-triage-b.html
@@ -31,7 +31,7 @@
         <label class="govuk-label govuk-radios__label" for="product-serious-risk">
           Yes
         </label>
-        <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">It's clear that the product non-compliance will present risk and a full risk assessment will be required.</p>
+        <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">It's clear that the product non-compliance will present risk and a full risk assessment is required.</p>
       </div>
      <!--  <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="product-triage-2" name="product-triage" type="radio" value="no">
@@ -46,7 +46,7 @@
           Not clear
         </label>
          <p id="home-life-hint" class="govuk-hint govuk-checkboxes__hint">
-          I would like to undertake risk triage to determine whether the product needs a full risk assessment or give an early indication of what the risk level is likely to be.
+          I would like to undertake risk triage to determine whether the product needs a full risk assessment and/or to give an early indication of what the risk level is likely to be.
         </p>
       </div>
 
